[gd_scene load_steps=8 format=2]

[ext_resource path="res://tiles/Titre.png" type="Texture" id=1]
[ext_resource path="res://Menu/buttons/NewGameButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu/buttons/OptionsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu/buttons/TestReseauButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://tiles/background.png" type="Texture" id=5]
[ext_resource path="res://FadeIn.tscn" type="PackedScene" id=6]
[ext_resource path="res://Menu/ControlMenu.gd" type="Script" id=7]

[node name="ControlMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = 212.0
margin_top = 165.0
margin_right = 812.0
margin_bottom = 435.0
custom_constants/separation = 20
alignment = 1

[node name="Titre" type="TextureRect" parent="Menu/VBoxContainer"]
margin_right = 600.0
margin_bottom = 100.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Buttons" type="VBoxContainer" parent="Menu/VBoxContainer"]
margin_left = 120.0
margin_top = 120.0
margin_right = 480.0
margin_bottom = 270.0
size_flags_horizontal = 4
custom_constants/separation = 15

[node name="NewGameButton" parent="Menu/VBoxContainer/Buttons" instance=ExtResource( 2 )]
margin_top = 0.0
margin_right = 360.0
margin_bottom = 40.0

[node name="OptionsButton" parent="Menu/VBoxContainer/Buttons" instance=ExtResource( 3 )]
margin_top = 55.0
margin_right = 360.0
margin_bottom = 95.0

[node name="TestReseauButton" parent="Menu/VBoxContainer/Buttons" instance=ExtResource( 4 )]
margin_top = 110.0
margin_right = 360.0
margin_bottom = 150.0

[node name="FadeIn" parent="." instance=ExtResource( 6 )]
visible = false
margin_top = -2.7207
margin_bottom = -2.7207
[connection signal="pressed" from="Menu/VBoxContainer/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Buttons/TestReseauButton" to="." method="_on_TestReseauButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
